--- a/packaging/deb/debian/control
+++ b/packaging/deb/debian/control
@@ -1,12 +1,16 @@
 Source: swift-sftp
-Maintainer: Hironobu Saito <hiro@hironobu.org>
 Section: net
 Priority: optional
+Maintainer: Hironobu <hiro@hironobu.org>
+Build-Depends: debhelper (>= 10)
+Standards-Version: 4.1.2
 Homepage: https://github.com/hironobu-s/swift-sftp
-Build-Depends: cdbs, debhelper
-Standards-Version: 1.1
+#Vcs-Git: https://anonscm.debian.org/git/collab-maint/swift-sftp.git
+#Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/swift-sftp.git
 
 Package: swift-sftp
 Architecture: amd64
+Depends: ${misc:Depends}, systemd
 Description: SFTP server for OpenStack Swift Object Storage
  You can control Object Storage through common SFTP client.
+ 
