--- a/packaging/deb/debian/rules
+++ b/packaging/deb/debian/rules
@@ -1,14 +1,44 @@
 #!/usr/bin/make -f
+# See debhelper(7) (uncomment to enable)
+# output every command that modifies files on the build system.
+#export DH_VERBOSE = 1
 
-include /usr/share/cdbs/1/rules/debhelper.mk 
 
-install/swift-sftp::
-	cp ../../bin/linux/swift-sftp swift-sftp.static
-	install -pd $(DEB_DESTDIR)/usr/sbin/
-	install -pd $(DEB_DESTDIR)/etc/swift-sftp
-	install -pd $(DEB_DESTDIR)/usr/lib/systemd/user
-	install -pm 755 swift-sftp.static $(DEB_DESTDIR)/usr/sbin/swift-sftp.static
-	install -pm 600 swift-sftp.conf $(DEB_DESTDIR)/etc/swift-sftp
-	install -pm 600 authorized_keys $(DEB_DESTDIR)/etc/swift-sftp
-	install -pm 644 swift-sftp.service $(DEB_DESTDIR)/usr/lib/systemd/user
-	cd $(DEB_DESTDIR)/usr/sbin; ln -s swift-sftp.static swift-sftp
+# see FEATURE AREAS in dpkg-buildflags(1)
+#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+
+# see ENVIRONMENT in dpkg-buildflags(1)
+# package maintainers to append CFLAGS
+#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
+# package maintainers to append LDFLAGS
+#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+
+
+%:
+	dh $@ --with-systemd
+
+
+# dh_make generated override targets
+# This is example for Cmake (See https://bugs.debian.org/641051 )
+#override_dh_auto_configure:
+#	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
+
+package=swift-sftp
+destdir=debian/${package}
+
+override_dh_auto_install:
+	dh_auto_install -O-buildsystem=golang
+
+	cp ../../bin/linux/${package} ${package}.static
+	install -pd ${destdir}/usr/sbin/
+	install -pd ${destdir}/etc/${package}
+	install -pm 755 ${package}.static ${destdir}/usr/sbin/${package}.static
+	install -pm 600 ${package}.conf ${destdir}/etc/${package}
+	install -pm 600 authorized_keys ${destdir}/etc/${package}
+	cd ${destdir}/usr/sbin; ln -s ${package}.static ${package}
+
+override_dh_systemd_start:
+	dh_systemd_start --no-restart-on-upgrade --no-start
+
+override_dh_systemd_enable:
+	dh_systemd_enable --name=${package}
