Change the instruction to use configuration file.

--- a/misc/swift-sftp.conf
+++ b/misc/swift-sftp.conf
@@ -1,23 +1,40 @@
 # Container name
+# 
+# swift-sftpが利用するコンテナ名
 container = "swiftsftp"
 
 # Create container if not exist
+# 
+# コンテナが存在しない場合は作成を試みる
 create_container = true
 
 # Bind address
+# 
+# 待ち受けするネットワーク名
 bind_address = "127.0.0.1:10022"
 
 # File name of server key
-server_key = "/etc/swift-sftp/server.key"
+# 
+# SFTPサーバーの秘密鍵ファイル名
+server_key = "server.key"
 
 # File name of authorized keys
-authorized_keys = "/etc/swift-sftp/authorized_keys"
+# 
+# サーバーに接続可能な公開鍵の一覧
+authorized_keys = "~/.ssh/authorized_keys"
 
 # File name of password list.
-# if blank, password authentication methods will be disabled.
+# if blank, password authentication methods is disabled.
+#
+# パスワード認証に使うファイルを指定する
+# 空欄を指定した場合、パスワード認証は無効になる
 password_file = ""
 
 # OpenStack configurations
+#
+# OpenStackへの接続情報を指定する
+# OS_で始まる環境変数で指定することも可能
+# https://docs.openstack.org/python-openstackclient/pike/cli/authentication.html
 os_identity_endpoint = ""
 os_user_id           = ""
 os_username          = ""
