Add Swift timeout option

--- a/misc/swift-sftp.conf
+++ b/misc/swift-sftp.conf
@@ -30,6 +30,11 @@ authorized_keys = "~/.ssh/authorized_keys"
 # 空欄を指定した場合、パスワード認証は無効になる
 password_file = ""
 
+# Timeout for the connection of Swift (second)
+#
+# Swiftのアップロード、ダウンロード時に設定されるタイムアウト(秒)
+swift_timeout = 180
+
 # OpenStack configurations
 #
 # OpenStackへの接続情報を指定する
