--- a/misc/testing/test.toml
+++ b/misc/testing/test.toml
@@ -17,6 +17,9 @@ authorized_keys = "misc/testing/authorized_keys"
 # if blank, The password authentication methods will be disabled.
 password_file = "misc/testing/dummypasswd"
 
+# Timeout for the connection of Swift (second)
+swift_timeout = 30
+
 # OpenStack configurations
 os_identity_endpoint = "https://identity.tyo1.conoha.io/v2.0"
 os_user_id           = "test_user_id"
